--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Search Form</title>
-        <link href="style.css" rel="stylesheet">
-    </head>
-    <body>
-        <div class="header">
-            <form>
-                <h1>Search for a Tech Associate</h1>
-                <div class="form-box">
-                    <input type="text" class="search-field"
-                    placeholder="name, location, year">
-                    <button class="search-btn" type="button">
-                        Search
-                    </button>
-
-                </div>
-            </form>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Search Form</title>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="header">
+      <form>
+        <h1>Search for a Colleague</h1>
+        <div class="form-box">
+          <input
+            type="text"
+            class="search-field"
+            placeholder="name, location, year"
+          />
+          <button class="search-btn" type="button">Search</button>
         </div>
-    </body>
+      </form>
+    </div>
+  </body>
 </html>
